--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "server.js",
+  "name": "server",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server",
-    "start": "node server"
+    "start": "node ./server/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,10 +18,16 @@
   "homepage": "https://github.com/JuyeonChae/CIS350-Project#readme",
   "description": "",
   "dependencies": {
+    "@azure/communication-calling": "^1.4.4",
+    "@azure/communication-common": "^2.1.0",
+    "@videosdk.live/react-native-sdk": "^0.0.33",
     "date-fns": "^2.29.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
