--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@azure/communication-common": "^2.1.0",
     "@videosdk.live/react-native-sdk": "^0.0.33",
     "date-fns": "^2.29.3",
+    "firebase-tools": "^11.15.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
