--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,3 +73,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-bom:31.0.2'
 }
+
+android {
+    compileSdkVersion 33
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
