--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,8 +70,8 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-bom:31.0.2'
+    implementation 'com.google.firebase:firebase-bom:31.1.0'
+    implementation 'com.google.firebase:firebase-analytics:21.2.0'
 }
 
 android {
