--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,11 @@ dependencies:
   timeago: 3.2.2
   url_launcher: 6.1.5
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  videosdk: ^1.0.8
+  http: ^0.13.5
 
 dev_dependencies:
 
